[tool.poetry]
name = "signal-processing-algorithms"
version = "2.0.1"
description = "Signal Processing Algorithms from MongoDB"
authors = [
    "Alexander Costas <alexander.costas@mongodb.com>",
    "David Bradford <david.bradford@mongodb.com>",
    "David Daly <david.daly@mongodb.com",
    "Henrik Ingo <henrik.ingo@mongodb.com>",
    "Jeff Zambory <jeff.zambory@mongodb.com>",
    "Jim O'Leary <jim.oleary@mongodb.com>",
    "Lydia Stepanek <lydia.stepanek@mongodb.com>"
]
license="Apache-2.0"
repository="https://github.com/mongodb/signal-processing-algorithms"
readme = "README.md"
include = [
    { path = "src/signal_processing_algorithms/energy_statistics/_e_divisive.cpython-310-darwin.so", format=["sdist", "wheel"]}
]

[tool.poetry.build]
script = "build_extension.py"

[tool.poetry.dependencies]
python = "^3.10"
more-itertools = "^8.2.0"
numpy = "^1.18.1"
scipy = "^1.3"
structlog = "^19.1"
typing-extensions = "^4.0.0"
cffi = "^1.17.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-black = "^0.3"
pytest-cov = "^2.8"
pytest-flake8 = "^1.0"
pytest-isort = "^1.3"
pytest-mypy = "^0.8"
pytest-pydocstyle = "^2.0.0"
hypothesis = "^5.19"
python-service-tools = "^0.4.4"
black = "^20.8b1"

[tool.poetry.group.build.dependencies]
setuptools = "^75.8.0"
cython = "^3.0.11"

[tool.black]
line-length = 100

[tools.setuptools]
ext-modules = [
  {name = "signal_processing_algorithms.energy_statistics._e_divisive", sources = ["./src/signal_processing_algorithms/energy_statistics/e_divisive.c"]}
]