[project]
description = "Signal Processing Algorithms from MongoDB"
name = "signal-processing-algorithms"
version = "2.0.1"
authors = [
    { name = "Alexander Costas", email = "alexander.costas@mongodb.com" },
    { name = "David Bradford", email = "david.bradford@mongodb.com" },
    { name = "David Daly", email = "david.daly@mongodb.com" },
    { name = "Henrik Ingo", email = "henrik.ingo@mongodb.com" },
    { name = "Jeff Zambory", email = "jeff.zambory@mongodb.com" },
    { name = "Jim O'Leary", email = "jim.oleary@mongodb.com" },
    { name = "Lydia Stepanek", email = "lydia.stepanek@mongodb.com" },
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python =">=3.10,<=3.11"
dependencies = [
    "more-itertools>=8.2.0",
    "numpy>=1.18.1",
    "scipy>=1.3",
    "structlog>=19.1",
    "typing-extensions>=4.0.0",
    "cffi>=1.17.1",
]

[project.urls]
repository="https://github.com/mongodb/signal-processing-algorithms"

[tool.poetry]
packages = [
    { include = "signal_processing_algorithms", from = "src" },
]
include = [
    { path = "src/signal_processing_algorithms/energy_statistics/*.so" },
    { path = "src/signal_processing_algorithms/energy_statistics/*.c" }
]

[tool.poetry.build]
script = "build_extension.py"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-black = "^0.3"
pytest-cov = "^2.8"
pytest-flake8 = "^1.0"
pytest-isort = "^1.3"
pytest-mypy = "^0.8"
pytest-pydocstyle = "^2.0.0"
hypothesis = "^5.19"
python-service-tools = "^0.4.4"
black = "^20.8b1"

[tool.poetry.group.build.dependencies]
setuptools = "^75.8.0"
cython = "^3.0.11"

[tool.black]
line-length = 100

[tools.setuptools]
ext-modules = [
  {name = "signal_processing_algorithms.energy_statistics._e_divisive", sources = ["./src/signal_processing_algorithms/energy_statistics/e_divisive.c"]}
]
